# WebNotebook

./: .doit.db.db  .flake8  .gitignore  .pydocstyle  Pipfile  README.md  dodo.py  main.py  pdfedit.py  pyproject.toml  requirements.txt  test.py
WebNotebook.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
data/: files.py  users.py
db/: users.db
doc/source/: conf.py  index.rst  modules.rst  webnotebook.rst
forms/: changepassform.py  fileuploadform.py  lectureuploadform.py  loginform.py  signinform.py
po/ru/LC_MESSAGES/: webnotebook.po
static/css/: style.css
static/scripts/: pdfviewer.js  user.js
static/sources/notebooks/гоша_Lmr/: Lmr_01
static/sources/notebooks/гоша_Курсач/: Курсач_02
static/sources/notebooks/гоша_Таблицы/: Таблицы_02
templates/: changepass.html  index.html  lecture.html  login.html  notebook.html  profile.html  signin.html
webnotebook/: __main__.py  main.py
webnotebook/Webnotebook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
webnotebook/db/: users.db
webnotebook/forms/: changepassform.py  fileuploadform.py  signinform.py
webnotebook/po/ru/LC_MESSAGES/: webnotebook.po
webnotebook/templates/: changepass.html  index.html  lecture.html  login.html  notebook.html  profile.html  signin.html
