[project]
name = "Webnotebook"
version = "1.0"
description = "Webnotebook"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [
 {name = "George K. Putilov (aka JohannBlood)", email = "georg-putilov@mail.ru"},
 {name = "Vitaliy D. Sagalevich", email = "vsagalev@gmail.com"},
]

keywords = ["aiogram", "project"]
classifiers = [
      "Development Status :: 4 - Beta",
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
]

dependencies = ['sqlalchemy',
'flask',
'flask-bcrypt',
'flask-wtf',
'flask-login',
'pypdf',
'pypdfium2',
'pillow',
'pypdf2',
'babel',
'sphinx',
'wheel'
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["Sphinx", "build", "doit", "flake8", "setuptools", "pytest", "pytest-asyncio"]

[tools.setuptools]
Packages = ["webnotebook"]
include-package-data = true

[project.scripts]
RunBot = "webnotebook.main:run"

[tool.setuptools.package-dir]
webnotebook = "webnotebook"

[tool.setuptools.package-data]
webnotebook = ["po/ru/*/*.mo", "static/css/*", "static/scripts/*", "static/sources/icons/*", "templates/*", "users.db"]